--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: My Website
+title: (EM)^2 Research Lab
 
 # Your name to show in the footer
-author: Some Person
+author: Prof. Yang Yang at The Pennsylvania State University
 
 # --- List of links in the navigation bar --- #
 
