--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: (EM)^2 Research Lab
+title: (EM)^2 Research Group
 
 # Your name to show in the footer
 author: Prof. Yang Yang at The Pennsylvania State University
@@ -14,6 +14,7 @@ author: Prof. Yang Yang at The Pennsylvania State University
 # --- List of links in the navigation bar --- #
 
 navbar-links:
+  Home:
   Research: "aboutme"
   People: 
   Resources:
