--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: (EM)^2 Research Group
 
 # Your name to show in the footer
-author: Prof. Yang Yang at The Pennsylvania State University
+author: The Pennsylvania State University
 
 # --- List of links in the navigation bar --- #
 
