--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: (EM)^2 Research Group
+title: (EM)^2 Research Lab @ The Pennsylvania State University
 
 # Your name to show in the footer
-author: The Pennsylvania State University
+author: (EM)^2 Research Lab @ The Pennsylvania State University
 
 # --- List of links in the navigation bar --- #
 
