--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ post_search: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: DodgerBlue
+navbar-col: "DodgerBlue"
 # "#EAEAEA"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
@@ -112,7 +112,7 @@ page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: DodgerBlue
+footer-col: "DodgerBlue"
 #"#EAEAEA"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
