--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: (EM)^2 Lab ｜ PSU
+title: (EM)^2 Lab ｜ PSU123
 
 # Your name to show in the footer
 author: (EM)^2 Research Lab @ The Pennsylvania State University
