--- a/_config.yml
+++ b/_config.yml
@@ -113,6 +113,7 @@ link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#404040"
 footer-text-col: "#FFFFFF"
+footer-border-col: "#404040"
 footer-link-col: "#404040"
 footer-hover-col: "#0085A1"
 
