--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ author: (EM)^2 Research Lab @ The Pennsylvania State University
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  Home: ""
-  Research: "aboutme"
-  People: 
-  Publication:
+  Home: "/"
+  Research: "/"
+  People: "/"
+  Publication:"/"
   Resources:
     - Engineering Science and Mechanics: "https://www.esm.psu.edu/"
     - MCL Equipment Reservation: "https://leo.psu.edu"
