--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ hover-col: "#0085A1"
 footer-col: "#404040"
 footer-text-col: "#FFFFFF"
 footer-border-col: "#404040"
-footer-link-col: "#404040"
+footer-link-col: "#B8BBBB"
 footer-hover-col: "#0085A1"
 
 #navbar-col: "#EAEAEA"
