--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ social-network-links:
   youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
-  linkedin: daattali
+  linkedin: yang-yang-823181129
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
