--- a/_config.yml
+++ b/_config.yml
@@ -46,9 +46,9 @@ social-network-links:
   #rss: true  # remove this line if you don't want to show an RSS link at the bottom
   #facebook: deanattali
   github: em2-research
-  twitter: daattali
+#  twitter: daattali
   #patreon: DeanAttali
-  youtube: c/daattali
+#  youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
   linkedin: yang-yang-823181129
