--- a/_config.yml
+++ b/_config.yml
@@ -108,8 +108,8 @@ post_search: true
 navbar-col: "#404040"
 navbar-text-col: "#FFFFFF"
 navbar-border-col: "#404040"
-page-col: "#404040"
-text-col: "#FFFFFF"
+page-col: "#FFFFFF"
+text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#404040"
