--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,15 @@ author: (EM)^2 Research Lab @ The Pennsylvania State University
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  Home: "/"
   Research: "/Research"
+    - Overview: "/Research"
+    - Extreme Environments: "/Extreme-environments"
+    - Extreme Performance: "/Extreme-materials"
+    - Advanced Modeling: "/Modeling"
   Team: "/Team"
   Publication: "/Publication"
   News: "/News"
-  Join us: "/Join-us"
+  Contact us: "/Join-us"
   Resources:
     - Engineering Science and Mechanics: "https://www.esm.psu.edu/"
     - MCL Equipment Reservation: "https://leo.psu.edu"
