--- a/_config.yml
+++ b/_config.yml
@@ -153,8 +153,7 @@ footer-hover-col: "#0085A1"
 #gtag: ""
 
 # Fill in your Google Analytics ID to track your website using Google Analytics
-google_analytics: "3240709999"
-#G-JXPLR2ZL06
+google_analytics: "UA-220123866-1"
 
 # Fill in your Cloudflare Analytics beacon token to track your website using Cloudflare Analytics
 #cloudflare_analytics: ""
