--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,8 @@ navbar-links:
   Join us: "/Join-us"
   Resources:
     - Engineering Science and Mechanics: "https://www.esm.psu.edu/"
-    - MCL Equipment Reservation: "https://leo.psu.edu"
+    - Materials Research Institute: "https://www.mri.psu.edu/"
+
 
 # --- Logo --- #
 
