--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ social-network-links:
   #rss: true  # remove this line if you don't want to show an RSS link at the bottom
   #facebook: deanattali
   github: em2-research
-#  twitter: daattali
+  twitter: em2_lab
   #patreon: DeanAttali
 #  youtube: c/daattali
 #  medium: yourname
