--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ social-network-links:
 #  calendly: yourname
 #  mastodon: instance.url/@username
 #  ORCID: your ORCID ID
-  google-scholar: EFM16LQAAAAJ
+  google-scholar: citations?user=EFM16LQAAAAJ&hl=en
 #  discord: invite/invite_code or users/userid 
 
 # If you want your website to generate an RSS feed, provide a description
